--- a/soma.ipynb
+++ b/soma.ipynb
@@ -6,7 +6,7 @@
       "name": "soma.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1HtcBr0KFEBGjzGx9GQe6",
+      "authorship_tag": "ABX9TyN2F9S59xnBEcfn1iEMQc3I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,25 +27,25 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/reidnersousa/Estudo/blob/main/soma.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/reidnersousa/Estudo/blob/cuda/soma.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0wpXxVKR0BAD",
-        "outputId": "9128bd7a-5e81-4f93-b8a0-76c03688926c"
+        "outputId": "ae3622be-5a8d-4fca-a150-21d51875e396"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting somaVetorial.cu\n"
+            "Writing somaVetorial.cu\n"
           ]
         }
       ],
@@ -161,19 +161,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JWcjW0il0WxW",
-        "outputId": "c784d53d-3d12-452f-f26f-2ab8ae23b363"
+        "outputId": "2cd7d8f6-00fa-4fcf-8dee-66232c5b122f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "  3   2   9   8   9   6   4   9   3   6 \n",
-            "  0   1   6   3   6   4   7   5   4   3 \n",
-            "  9   7   3   0   2   1   7   6   4   8 \n",
-            "  8   7   2   9   6   2   7   2   1   1 \n",
-            ">>-730439440,>>22097,>>0,>>0,>>0,>>0,>>-1,>>0,>>0,==0\n"
+            "  0   5   7   3   3   9   1   6   8   1 \n",
+            "  9   4   6   4   3   8   4   0   1   3 \n",
+            "  3   5   5   8   7   2   3   7   3   6 \n",
+            "  2   5   2   0   9   7   1   2   3   1 \n",
+            ">>12,>>9,>>11,>>12,>>10,>>10,>>7,>>7,>>4,==9\n"
           ]
         }
       ]
@@ -352,7 +352,7 @@
         "  *valor1 = *valor1* *valor2;\n",
         " \n",
         "}\n",
-        "__global__ void FazTudoInt (int *v1, int *v2 ,int *v3 , int *v4)\n",
+        "__global__ void FazTudoInt (float *v1, float *v2 ,float *v3 , float *v4)\n",
         "{\n",
         "  *v2=*v2+*v3;\n",
         "  *v4=*v2* *v4;\n",
@@ -362,9 +362,9 @@
         "\n",
         "\n",
         "int main(void) {\n",
-        "  int a, b, c,d;              // host copies of a, b, c\n",
-        "  int *d_a, *d_b, *d_c,*d_d;     // device copies of a, b, c\n",
-        "  int size = sizeof(int);\n",
+        "  float a, b, c,d;              // host copies of a, b, c\n",
+        "  float *d_a, *d_b, *d_c,*d_d;     // device copies of a, b, c\n",
+        "  float size = sizeof(float);\n",
         "  \n",
         " \n",
         "  // Allocate space for device copies of a, b, c\n",
@@ -386,17 +386,17 @@
         "  cudaMemcpy(d_d, &d, size, cudaMemcpyHostToDevice);\n",
         "\n",
         "\n",
-        "  printf(\"a= %d\\n\",a);\n",
-        "  printf(\"b= %d\\n\",b);\n",
-        "  printf(\"c= %d\\n\",c);\n",
-        "  printf(\"d= %d\\n\",d);\n",
+        "  printf(\"a= %f\\n\",a);\n",
+        "  printf(\"b= %f\\n\",b);\n",
+        "  printf(\"c= %f\\n\",c);\n",
+        "  printf(\"d= %f\\n\",d);\n",
         "  \n",
         "  // Launch add() kernel on GPU\n",
         "   FazTudoInt<<<1,1>>>(d_a, d_b, d_c,d_d);\n",
         "  \n",
         "  \n",
         "  cudaMemcpy(&a, d_a, size, cudaMemcpyDeviceToHost);\n",
-        "  printf(\"resultado %d\",a);\n",
+        "  printf(\"resultado %f\",a);\n",
         "\n",
         "\n",
         "  \n",
@@ -417,15 +417,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wQTrV9gBHps-",
-        "outputId": "8d1a9904-7169-4716-d592-7d177bfe28f9"
+        "outputId": "cb926400-005d-428d-9a41-79101bcde5b1"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing somaa.cu\n"
+            "Overwriting somaa.cu\n"
           ]
         }
       ]
@@ -441,19 +441,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5D7b40QTHs9N",
-        "outputId": "d4048089-00ff-4064-9221-5acd16400cd8"
+        "outputId": "4f2a7e01-aaf8-4e5b-f089-f563ca0a440d"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a= 0\n",
-            "b= 7\n",
-            "c= 10\n",
-            "d= 15\n",
-            "resultado -25"
+            "a= 0.000000\n",
+            "b= 7.000000\n",
+            "c= 10.000000\n",
+            "d= 15.000000\n",
+            "resultado -24.500000"
           ]
         }
       ]
